--- a/AdvancedR_Course_Day1/Advanced-Day1.qmd
+++ b/AdvancedR_Course_Day1/Advanced-Day1.qmd
@@ -1,5 +1,17 @@
 ---
-title: "Advanced"
+title: "Modelling in R"
 format: html
+theme: sandstone
+author-title: Made for
+author: Bush Heritage
+toc: true
+toc-location: left
+toc-title: Content
+toc-depth: 4
+published-title: Date
+date: 2024-02-13
 editor: visual
+embed-resources: true
 ---
+
+# Welcome
